--- a/about/index.jade
+++ b/about/index.jade
@@ -1,8 +1,16 @@
 p
-  | Unlike a lot of other frontend developers, I didn't come to development through visual design. I'm more of a verbal than a visual person, so I'm good at designing semantic, clear APIs in JavaScript, writing documentation, and helping other people. I like making tools that other people can use regardless of their skill levels. I care a lot about making code--that is, the tools that automate computers--accessible to the world outside professional software engineers.
-p I'm working as a Software Architect at Volusion, which is exactly as glamorous and important as it sounds. I owe the growing community of Mozu users and theme developers a lot of my time, so I'm not really available for freelance work. I do offer pithy advice via 
+  | I like toolmaking. If you ask me to make a website, I'll probably make a website generator. The fun starts when you ask me to make a website generator.
+  | Unlike a lot of other frontend developers, I didn't find my way here through visual design. I'm more of a verbal person, so I'm good at:
+ul
+  li designing semantic, clear APIs in JavaScript
+  li writing documentation, and helping other people
+  li making tools that other people can use regardless of their skill levels
+  li and writing code that sacrifices nothing in performance, sane architecture, and scalability, while remaining accessible and readable by other people.
+p I'm working as a software architect at Volusion, which is both challenging and exciting. 
+p I devote a lot of time to the rapidly-growing community of Mozu users, so I'm not really available for freelance work. I do offer pithy advice via 
   a(href="mailto:zetlen@gmail.com") email
-  |.
+  | and 
+  a(href="https:/github.com/zetlen") GitHub.
 section.suspects
   h2 Employers
   ul.usual-suspects
@@ -14,12 +22,12 @@ section.suspects
           a(href="http://mozu.com") Mozu
         h4 2012-2015
       :markdown
-        Mozu is the next-generation eCommerce platform from Volusion, built on microservices and modern Web technologies. I was the first engineer on the Mozu project; I helped make a lot of initial technology choices, and ultimately I ended up the architect in charge of the theme engine and frontend developer experience. 
-         - I developed large portions of the adminstrative app.
-         - I designed the **Hypr Live** template system, which allows reuse of the same templates on the server and the client. 
-         - I created the Mozu Core Theme, a "starting point" theme which inlined best practices, instructional code, and several single-page shopping apps into a single, extensible package. 
-         - I created build tools and a package ecosystem for theme developers.
-         - I wrote two SDKs, one for browsers and one for NodeJS, to integrate with the Mozu layer of RESTful web services.
+        Mozu is the next-generation eCommerce platform from Volusion, built on microservices and modern Web technologies. I was the first engineer on the Mozu project; I collaborated on a lot of initial, fundamental technology choices. I ended up the architect in charge of the theme engine and frontend developer experience. In this capacity I:
+         - developed large portions of the adminstrative app
+         - designed the **Hypr Live** template system, which allows reuse of the same templates on the server and the client
+         - created the Mozu Core Theme, a "starting point" theme which inlined best practices, instructional code, and several single-page shopping apps into one extensible package
+         - made build tools and a package ecosystem for theme developers
+         - wrote two SDKs--one for browsers and one for NodeJS--to integrate with the Mozu layer of RESTful web services.
     
     li.suspect
       .suspect-header
@@ -29,7 +37,12 @@ section.suspects
           a(href="http://volusion.com") Volusion
         h4 2011-2012
       :markdown
-        I started at Volusion in 2011, when there were very few specialized frontend developers in the engineering department. I helped to overhaul our approach to frontend development, properly separate our concerns, introduce modern JavaScript practices to the team, and organize our codebase into reusable components. Before leaving the flagship product team to work on Mozu full-time, I led the project to reskin the administrative control panel for the V13 release. I cleaned up a VBScript codebase and replaced repetitive CSS files with the [Less CSS preprocessor](http://lesscss.org/).
+        I started at Volusion in 2011, when there were very few specialized frontend developers in the engineering department. I helped to:
+         - overhaul our approach to frontend development
+         - properly separate our concerns
+         - introduce modern JavaScript practices to the team
+         - and organize our codebase into reusable components. 
+        Before leaving the flagship product team to work on Mozu full-time, I led the project to reskin the administrative control panel for the V13 release. I cleaned up a VBScript codebase and replaced repetitive CSS files with the [Less CSS preprocessor](http://lesscss.org/).
     
     li.suspect
       .suspect-header
@@ -39,7 +52,12 @@ section.suspects
           a(href="http://convio.com") Convio
         h4 2007-2010
       :markdown
-        At Convio I was a Technical Architect in charge of deploying the Convio SaaS platform for national and international nonprofit organizations. I designed our first social networking integrations and pioneered the use of dynamic UIs in donation forms. Convio has since been acquired by Blackbaud.
+        At Convio I was a technical architect in charge of:
+         - deploying the Convio SaaS platform for national and international nonprofit organizations
+         - collaborating with nonprofit clients on large-scale projects to meet tight deadlines
+         - designing our first social networking integrations
+         - and pioneering the use of dynamic UIs in donation forms. 
+        *Convio has since been acquired by Blackbaud.
 
 section.suspects
   h2 Related Projects
@@ -62,21 +80,21 @@ section.suspects
       h3
         a(href="http://patents.justia.com/patent/8522134") Patents
       p.
-        My name is on at least one software patent submitted by Volusion. I am ambivalent about both the utility of software patents in general and the readability of this one, but it was a good idea.
+        My name is on at least one software patent submitted by Volusion. I' a'm ambivalent about the utility of software patents in general, but this one was a good idea.
 
 section.suspects
   h2 Unrelated Projects
   ul.usual-suspects
     li.suspect
       h3
-        a(href="http://tapes.jameszetlen.com/") tapes
+        a(href="http://jameszetlen.com/tapes") tapes
       p.
-        A mixtape generator using Yeoman, Assemble, Grunt, and a complex SVG-powered animation that replicates the motion of tape wheels as closely as possible. The directory is full of mixtapes I've made over the years.
+        A mixtape generator using Yeoman, Assemble, Grunt, and a complex SVG-powered animation that replicates the motion of tape wheels as closely as possible. I’m a musician and constant seeker of new music. This was a labor of love that didn’t feel laborious. The directory is full of mixtapes I've made over the years.
     li.suspect
       h3
         a(href="https://zetlen.github.io/ttrraannssffoorrmmss") ttrraannssffoorrmmss
       p.
-        An art project to create the most useless DOM manipulation library possible, with the most obtuse API imaginable, the mose impossible installation conceivable, and bad instructions.
+        An art project to create the most useless DOM manipulation library possible, with the most obtuse API imaginable, the most impossible installation conceivable, and bad instructions.
     li.suspect
       h3
         a(href="http://sorryeverybody.com") Sorry Everybody
@@ -100,4 +118,4 @@ section.suspects
       h3
         a(href="http://dreamfather.com/xanadont") xanadont
       p.
-        I started a band in 2008. We broke up because of grad school and marriage and the like, but we recorded one demo in a studio in east Austin.
+        I started a band in 2008. We broke up because of grad school and marriage and the like, but we recorded one super fun demo in a studio in east Austin.
