minor updates plus fixing www problem

--- a/about/index.jade
+++ b/about/index.jade
@@ -80,7 +80,7 @@ section.suspects
       h3
         a(href="http://patents.justia.com/patent/8522134") Patents
       p.
-        My name is on at least one software patent submitted by Volusion. I' a'm ambivalent about the utility of software patents in general, but this one was a good idea.
+        My name is on at least one software patent submitted by Volusion. I'm ambivalent about the utility of software patents in general, but this one was a good idea.
 
 section.suspects
   h2 Unrelated Projects
