--- a/stylesheets/_treachery.less
+++ b/stylesheets/_treachery.less
@@ -1,5 +1,11 @@
 .treachery {
   text-align: center;
+  margin-top: 40px;
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
   li {
     display: inline-block;
   }
@@ -23,6 +29,6 @@
     width: 150px;
     height: 150px;
     margin: 10px;
-    transform: translate(-70px, -40px) scale(0.5,0.5);
+    transform: translate(-40px, -40px) scale(0.5,0.5);
   }
 }
