okay, trying this submodule thing again

--- a/about/index.jade
+++ b/about/index.jade
@@ -70,7 +70,7 @@ section.suspects
       h3
         a(href="https://github.com/zetlen/fenestrate") fenestrate
       :markdown
-        A Node utility for Windows users, who are plagued with a [strong disagreement between the NPM package resolution strategy and the Windows userland utilities.](https://github.com/joyent/node/issues/6960). It's basically a superpowered `npm dedupe`; it aggressively flattens the package hierarchy in an attempt to give you more headroom on Windows.
+        A Node utility for Windows users, who are plagued with a [strong disagreement between the NPM package resolution strategy and the Windows userland utilities.](https://github.com/joyent/node/issues/6960) It's basically a superpowered `npm dedupe`; it aggressively flattens the package hierarchy in an attempt to give you more headroom on Windows.
     li.suspect
       h3
         a(href="http://zetlen.github.io/vpkr/") vpkr
@@ -89,7 +89,7 @@ section.suspects
       h3
         a(href="http://jameszetlen.com/tapes") tapes
       p.
-        A mixtape generator using Yeoman, Assemble, Grunt, and a complex SVG-powered animation that replicates the motion of tape wheels as closely as possible. I’m a musician and constant seeker of new music. This was a labor of love that didn’t feel laborious. The directory is full of mixtapes I've made over the years.
+        A mixtape generator using Yeoman, Assemble, Grunt, and a complex SVG-powered animation that replicates the motion of tape wheels as closely as possible. I'm a musician and constant seeker of new music. This was a labor of love that didn't feel laborious. The directory is full of mixtapes I've made over the years.
     li.suspect
       h3
         a(href="https://zetlen.github.io/ttrraannssffoorrmmss") ttrraannssffoorrmmss
