responsive plus GA

--- a/about/index.jade
+++ b/about/index.jade
@@ -7,10 +7,8 @@ ul
   li making tools that other people can use regardless of their skill levels
   li and writing code that sacrifices nothing in performance, sane architecture, and scalability, while remaining accessible and readable by other people.
 p I'm working as a software architect at Volusion, which is both challenging and exciting. 
-p I devote a lot of time to the rapidly-growing community of Mozu users, so I'm not really available for freelance work. I do offer pithy advice via 
-  a(href="mailto:zetlen@gmail.com") email
-  | and 
-  a(href="https:/github.com/zetlen") GitHub.
+:markdown
+  I devote a lot of time to the rapidly-growing community of Mozu users, so I'm not really available for freelance work. I do offer pithy advice via [email](mailto:zetlen@gmail.com) and [GitHub](https://github.com/zetlen).
 section.suspects
   h2 Employers
   ul.usual-suspects
