--- a/stylesheets/_exupery.less
+++ b/stylesheets/_exupery.less
@@ -1,3 +1,11 @@
 .exupery canvas {
   transform: translate(300px, 20px);
 }
+
+@media (max-width: 720px) {
+  .exupery canvas {
+    transform: scale(0.75, 0.75);
+    margin: 0 auto;
+    display: block;
+  }
+}
