--- a/stylesheets/_footer.less
+++ b/stylesheets/_footer.less
@@ -2,5 +2,5 @@ footer {
   font-size: 14pt;
   margin: 50px auto;
   text-align: center;
-  color: desaturate(darken(@light, 15%), 15%);
+  color: #ddc;
 }
