--- a/about/index.jade
+++ b/about/index.jade
@@ -85,6 +85,11 @@ section.suspects
   ul.usual-suspects
     li.suspect
       h3
+        a(href="http://jameszetlen.com/synesthesia") synesthesia
+      p.
+        A little toy that displays the color values of words and names whose characters resemble six-character hex codes, like #BADA55 or #FACADE. Now with Wikipedia article titles as well as dictionary words.
+    li.suspect
+      h3
         a(href="http://jameszetlen.com/tapes") tapes
       p.
         A mixtape generator using Yeoman, Assemble, Grunt, and a complex SVG-powered animation that replicates the motion of tape wheels as closely as possible. I'm a musician and constant seeker of new music. This was a labor of love that didn't feel laborious. The directory is full of mixtapes I've made over the years.
