--- a/about/index.jade
+++ b/about/index.jade
@@ -27,7 +27,7 @@ section.suspects
         li created the Mozu Core Theme, a "starting point" theme which inlined best practices, instructional code, and several single-page shopping apps into one extensible package
         li made build tools and a package ecosystem for theme developers
         li wrote two SDKs--one for browsers and one for NodeJS--to integrate with the Mozu layer of RESTful web services.
-        li core developer for the Arc.js JavaScript-based open actions framework, designing APIs and writing scaffolding and sync tools in Node
+        li was a core developer for the Arc.js JavaScript-based open actions framework, designing APIs and writing scaffolding and sync tools in Node
       p The Mozu Core Theme is still my most publicly prominent contribution. The Core theme is an inheritable starting point for Mozu sites, and because of its versatility and the conventions we established around it, it is the HTML, CSS, and JavaScript code base from which all of these public Mozu clients have built their sites:
       ul.mozu-sites
          li #[a(href="http://www.goruck.com") #[img(src="goruck-logo-lg.png" alt="GORUCK" title="GORUCK")]]
