--- a/stylesheets/_treachery.less
+++ b/stylesheets/_treachery.less
@@ -24,8 +24,11 @@
       top: 0;
       left: 0;
     }
-  }
-  &.smaller a {
+  }  
+}
+
+.smaller .treachery {
+  a {
     width: 150px;
     height: 150px;
     margin: 10px;
