fix footer color

--- a/stylesheets/_footer.less
+++ b/stylesheets/_footer.less
@@ -2,5 +2,5 @@ footer {
   font-size: 14pt;
   margin: 50px auto;
   text-align: center;
-  color: #ddc;
+  color: desaturate(lighten(@dark, 70%), 80%)
 }
