add simplewriter to projects

--- a/about/index.jade
+++ b/about/index.jade
@@ -76,6 +76,11 @@ section.suspects
   ul.usual-suspects
     li.suspect
       h3
+        a(href="http://blog.xkcd.com/2015/09/22/a-thing-explainer-word-checker/") XKCD Simplewriter
+      :markdown
+        An old friend of mine, Randall Munroe of [XKCD](http://xkcd.com), asked me to make a fun "simple writer" for his new book, Thing Explainer. The simple writer helps you write using only the top ten hundred words in our language. You never know when someone might thank you for writing this way. [Here is the computer writer I made for him](http://xkcd.com/simplewriter), and [here is something he wrote to tell his readers about it](http://blog.xkcd.com/2015/09/22/a-thing-explainer-word-checker/). It's very simple, of course, and also it's light green.
+    li.suspect
+      h3
         a(href="https://github.com/zetlen/jort") jort
       :markdown
         A Node testing helper that creates ephemeral local HTTP servers that deliver a single payload, or a sequence of preconfigured payloads, and then disappear. Built for testing the Mozu Node SDK, jort seemed to be useful enough to document, assign a charismatic name, and release. It seems to be finding some purchase amongst other SDK developers, and other types writing HTTP clients whose URLs come in from configuration.
